--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "Magic Arbuz Collection"
 authors = ["Fartane Corp."]
+license = "MIT"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
